src/objects/c2g__PaymentsPlusErrorLog__c.object
<CustomObject>
    <customHelpPage>c2g__codahelppaymentspluserrorlog</customHelpPage>
    <description>Stores error logs from the Payments Plus process.</description>
    <fields>
        <fullName>c2g__AttemptNumber__c</fullName>
        <label>Attempt Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ErrorReason__c</fullName>
        <inlineHelpText>Error Description</inlineHelpText>
        <label>Error Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentProposalNumber__c</fullName>
        <label>Payment Proposal Number</label>
        <referenceTo>c2g__codaPayment__c</referenceTo>
        <relationshipLabel>Payments Plus Error Logs</relationshipLabel>
        <relationshipName>PaymentsPlusErrorLogs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentStage__c</fullName>
        <label>Payment Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add to Proposal</fullName>
                </value>
                <value>
                    <fullName>Remove from Proposal</fullName>
                </value>
                <value>
                    <fullName>Create Media Data</fullName>
                </value>
                <value>
                    <fullName>Post and Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__SourceDocument__c</fullName>
        <formula>IF (ISBLANK(c2g__TransactionLineItem__c), NULL,
		CASE (c2g__TransactionLineItem__r.c2g__Transaction__r.c2g__TransactionType__c ,
		&quot;Cash&quot;, HYPERLINK(c2g__TransactionLineItem__r.c2g__Transaction__r.c2g__CashEntry__c, c2g__TransactionLineItem__r.c2g__Transaction__r.c2g__CashEntry__r.Name),
		&quot;Journal&quot;, HYPERLINK(c2g__TransactionLineItem__r.c2g__Transaction__r.c2g__Journal__c, c2g__TransactionLineItem__r.c2g__Transaction__r.c2g__Journal__r.Name),
		&quot;Purchase Credit Note&quot;, HYPERLINK(c2g__TransactionLineItem__r.c2g__Transaction__r.c2g__PayableCreditNote__c, c2g__TransactionLineItem__r.c2g__Transaction__r.c2g__PayableCreditNote__r.Name),
		&quot;Purchase Invoice&quot;,  HYPERLINK(c2g__TransactionLineItem__r.c2g__Transaction__r.c2g__PayableInvoice__c, c2g__TransactionLineItem__r.c2g__Transaction__r.c2g__PayableInvoice__r.Name),
		&quot;Credit Note&quot;, HYPERLINK(c2g__TransactionLineItem__r.c2g__Transaction__r.c2g__SalesCreditNote__c, c2g__TransactionLineItem__r.c2g__Transaction__r.c2g__SalesCreditNote__r.Name),
		&quot;Invoice&quot;, HYPERLINK(c2g__TransactionLineItem__r.c2g__Transaction__r.c2g__SalesInvoice__c, c2g__TransactionLineItem__r.c2g__Transaction__r.c2g__SalesInvoice__r.Name), 
		&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionLineItem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Transaction Line Item</label>
        <referenceTo>c2g__codaTransactionLineItem__c</referenceTo>
        <relationshipLabel>Payments Plus Error Logs</relationshipLabel>
        <relationshipName>PaymentsPlusTransactionErrorLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Payments Plus Error Log</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__PaymentProposalNumber__c</columns>
        <columns>c2g__AttemptNumber__c</columns>
        <columns>c2g__PaymentStage__c</columns>
        <columns>c2g__TransactionLineItem__c</columns>
        <columns>c2g__SourceDocument__c</columns>
        <columns>c2g__ErrorReason__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LOG{000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments Plus Error Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>